--- a/package.json
+++ b/package.json
@@ -2,73 +2,15 @@
   "name": "employee-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
-  "dependencies": {
-    "ansi-escapes": "^4.3.0",
-    "ansi-regex": "^5.0.0",
-    "chalk": "^2.4.2",
-    "ansi-styles": "^3.2.1",
-    "chardet": "^0.7.0",
-    "cli-cursor": "^3.1.0",
-    "cli-width": "^2.2.0",
-    "clone": "^1.0.4",
-    "color-convert": "^1.9.3",
-    "core-util-is": "^1.0.2",
-    "bignumber.js": "^7.2.1",
-    "console.table": "^0.10.0",
-    "defaults": "^1.0.3",
-    "color-name": "^1.1.3",
-    "easy-table": "^1.1.0",
-    "emoji-regex": "^8.0.0",
-    "escape-string-regexp": "^1.0.5",
-    "external-editor": "^3.1.0",
-    "figures": "^3.1.0",
-    "has-flag": "^3.0.0",
-    "iconv-lite": "^0.4.24",
-    "inherits": "^2.0.4",
-    "inquirer": "^7.0.3",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-promise": "^2.1.0",
-    "isarray": "^1.0.0",
-    "lodash": "^4.17.15",
-    "mimic-fn": "^2.1.0",
-    "mute-stream": "^0.0.8",
-    "mysql": "^2.17.1",
-    "onetime": "^5.1.0",
-    "os-tmpdir": "^1.0.2",
-    "process-nextick-args": "^2.0.1",
-    "readable-stream": "^2.3.6",
-    "restore-cursor": "^3.1.0",
-    "run-async": "^2.3.0",
-    "rxjs": "^6.5.4",
-    "safe-buffer": "^5.1.2",
-    "safer-buffer": "^2.1.2",
-    "signal-exit": "^3.0.2",
-    "string-width": "^4.2.0",
-    "sqlstring": "^2.3.1",
-    "through": "^2.3.8",
-    "tmp": "^0.0.33",
-    "supports-color": "^5.5.0",
-    "tslib": "^1.10.0",
-    "type-fest": "^0.8.1",
-    "strip-ansi": "^5.2.0",
-    "util-deprecate": "^1.0.2",
-    "wcwidth": "^1.0.1",
-    "string_decoder": "^1.1.1"
-  },
-  "devDependencies": {},
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Dannyb0o0y/Employee-Tracker.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Dannyb0o0y/Employee-Tracker/issues"
-  },
-  "homepage": "https://github.com/Dannyb0o0y/Employee-Tracker#readme"
+  "dependencies": {
+    "console.table": "^0.10.0",
+    "express": "^4.17.1",
+    "inquirer": "^8.0.0",
+    "mysql2": "^2.2.5"
+  }
 }
