--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "employee-tracker",
   "version": "1.0.0",
-  "description": "",
+  "description": "![license badge](\r       https://img.shields.io/badge/license-Unlicense-blue\r       )",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,5 +12,15 @@
     "express": "^4.17.1",
     "inquirer": "^8.0.0",
     "mysql2": "^2.2.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Dannyb0o0y/Employee-Tracker.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Dannyb0o0y/Employee-Tracker/issues"
+  },
+  "homepage": "https://github.com/Dannyb0o0y/Employee-Tracker#readme"
 }
